--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 </head>
 <body >
     <main class="main-general" >
-        <div class="contenedor-lr">
+        <a href="https://www.instagram.com/preadolescentesigr/" class="contenedor-lr">
             <img src="/public/recursos/logo.png" alt="">
             <div class="redes">
                 <h2 style="font-weight: normal; padding-right:3px;">preadolescentesigr</h2> 
                 <i style="font-size: large; font-weight:bold" class="fa-brands fa-instagram"></i>
             </div>
-        </div>
+        </a>
         
         <div data-aos="fade-up"  style="display: flex; justify-content: center; background-color:none;" >
             <img id="logoPre" src="/public/recursos/logo pre.png" class="logoPrincipal" alt="">
